# moviola

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  cargo-sources.json  gst-plugin-gtk4-sources.yml  icons.toml  io.rntrtul.github.Moviola.yml  meson.build  org.fareedsh.Moviola.yml
data/: io.rntrtul.github.Moviola.desktop.in  io.rntrtul.github.Moviola.gschema.xml  io.rntrtul.github.Moviola.metainfo.xml.in  meson.build  org.fareedsh.Moviola.desktop.in  org.fareedsh.Moviola.gschema.xml  org.fareedsh.Moviola.metainfo.xml.in  resources.gresource.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: app.rs  config.rs  config.rs.in  geometry.rs  main.rs  meson.build  range.rs  renderer.rs  ui.rs  video.rs
src/geometry/: line.rs  point.rs  rectangle.rs
src/preview/: imp.rs  mod.rs
src/renderer/: compute.wgsl  draw.wgsl  effects.rs  effects.wgsl  export_buffer.rs  export_texture.rs  frame_position.rs  handler.rs  position.wgsl  presenter.rs  renderer.rs  texture.rs  timer.rs  vertex.rs
src/ui/: controls_sidebar.rs  crop_box.rs  crop_controls.rs  crop_page.rs  edit_controls.rs  handle.rs  handle_manager.rs  mod.rs  output_controls.rs  output_page.rs  preview.rs  sidebar.rs  slider.rs  thumbnail_manager.rs  timeline.rs  video_controls.rs  video_info_discoverer.rs  video_player.rs
src/ui/preview/: bounding_box.rs  effects_pipeline.rs  input.rs  orient.rs  pan.rs  preview.rs  preview_frame.rs  zoom.rs
src/ui/preview/effects_pipeline/: compute.wgsl  draw.wgsl  renderer.rs  shader.wgsl  texture.rs  timer.rs  vertex.rs
src/ui/sidebar/: adjust.rs  crop.rs  output.rs  sidebar.rs
src/ui/slider/: adjust_row.rs  slider.rs
src/ui/timeline/: handle.rs  timeline.rs
src/ui/video_controls/: handle.rs  timeline.rs  video_control.rs
src/video/: codecs.rs  export.rs  metadata.rs  metadata_discoverer.rs  mod.rs  player.rs  thumbnail.rs
