[package]
name = "moviola"
version = "0.1.0"
authors = ["Fareed Hussain <fareedsharhussain@gmail.com>"]
edition = "2021"

[dependencies]
relm4 = { version = "0.9.0", features = ["libadwaita", "gnome_46"] }
gst = { package = "gstreamer", version = "0.23.0" }
gst_video = { package = "gstreamer-video", version = "0.23.0" }
gst_app = { package = "gstreamer-app", version = "0.23.0" }
ges = { package = "gstreamer-editing-services", version = "0.23.0" }
gtk4 = { version = "0.9.0", features = ["v4_14"] }
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["time"] }
gst_plugin_gtk4 = { package = "gst-plugin-gtk4", version = "0.13.0" }