[package]
name = "moviola"
version = "0.1.0"
authors = ["Fareed Hussain <fareedsharhussain@gmail.com>"]
edition = "2021"

[dependencies]
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
gst = { package = "gstreamer", version = "0.23.0" }
gst_video = { package = "gstreamer-video", version = "0.23.0" }
gst_app = { package = "gstreamer-app", version = "0.23.0" }
ges = { package = "gstreamer-editing-services", version = "0.23.0" }
gtk4 = { version = "0.9.4", features = ["v4_16"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["time"] }
lazy_static = "1.5.0"
wgpu = { version = "23.0.0" }
bytemuck = { version = "1.20.0", features = ["derive"] }
flume = "0.11.0"
pollster = "0.4.0"
env_logger = "0.11.5"
fast_image_resize = { version = "4.2.1", features = ["image"] }
clap = { version = "4.5.21", features = ["derive"] }
url = "2.5.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }