[package]
name = "moviola"
version = "0.1.0"
authors = ["Fareed Hussain <fareedsharhussain@gmail.com>"]
edition = "2021"

[dependencies]
relm4 = { version = "0.9.1", features = ["libadwaita", "gnome_47"] }
gst = { package = "gstreamer", version = "0.23.0" }
gst_video = { package = "gstreamer-video", version = "0.23.0" }
gst_app = { package = "gstreamer-app", version = "0.23.0" }
gst_pbutils = { package = "gstreamer-pbutils", version = "0.23.4" }
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["time", "rt-multi-thread", "macros"] }
wgpu = { version = "24.0.1", features = ["wgsl"], default-features = false }
bytemuck = { version = "1.21.0", features = ["derive"] }
fast_image_resize = { version = "5.1.1", features = ["image"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
approx = { version = "0.5.1" }
argh = { version = "0.1.13", features = ["help"], default-features = false }
encase = { version = "0.10.0", features = ["mint"] }
mint = "0.5.9"

[build-dependencies]
glib-build-tools = "0.20.0"
